--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "sen",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "crypto-js": "^4.2.0",
